<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nero.calculatorapp.MainActivity"
    android:orientation="vertical"
    android:background="@android:color/background_dark">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom|right"
        android:background="#000000">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/historyView"
            android:gravity="bottom|center|right"
            android:layout_weight="1"
            android:textDirection="ltr"
            android:layout_margin="2dp"
            android:textColor="#ffffff"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/currentTextView"
            android:layout_weight="2"
            android:gravity="bottom|center|right"
            android:textDirection="ltr"
            android:layout_margin="2dp"
            android:textColor="#ffffff"
            android:textSize="30sp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/memoryCreater"
                android:id="@+id/memoryCreator"
                android:layout_weight="1"
                android:textSize="20sp"
                android:background="#bdd6d7d7"
                android:onClick="onMemoryButtonClick"
                android:textColor="@android:color/background_dark"
                android:layout_margin="1dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/deleteLastItem"
                android:layout_weight="1"
                android:textSize="25sp"
                android:onClick="onLastDeleteClick"
                android:background="@mipmap/backbutton"
                android:backgroundTint="#83cc0000" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/number7"
                android:id="@+id/numberSeven"
                android:layout_weight="1"
                android:textSize="25sp"
                android:onClick="onNumberClick"
                android:textColor="@android:color/background_light"
                android:elevation="11dp"
                android:background="@null" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/Number4"
                android:id="@+id/numberFour"
                android:layout_weight="1"
                android:textSize="25sp"
                android:onClick="onNumberClick"
                android:textColor="@android:color/background_light"
                android:elevation="11dp"
                android:background="@null" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/number1"
                android:id="@+id/numberOne"
                android:layout_weight="1"
                android:textSize="25sp"
                android:onClick="onNumberClick"
                android:textColor="@android:color/background_light"
                android:elevation="11dp"
                android:background="@null" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/decimalPoint"
                android:id="@+id/decimalButton"
                android:layout_weight="1"
                android:textSize="25sp"
                android:background="@null"
                android:onClick="onNumberClick"
                android:textColor="@android:color/background_light" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/memoryClear"
                android:id="@+id/memoryClear"
                android:layout_weight="1"
                android:textSize="20sp"
                android:background="#bdd6d7d7"
                android:onClick="onMemoryButtonClick"
                android:textColor="@android:color/background_dark"
                android:layout_margin="1dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/percentageButton"
                android:id="@+id/percentageButton"
                android:layout_weight="1"
                android:textSize="25sp"
                android:background="#910099cc"
                android:onClick="calculatePercentageOfResult"
                android:textColor="@android:color/background_light"
                android:layout_margin="1dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/number8"
                android:id="@+id/numberEight"
                android:layout_weight="1"
                android:textSize="25sp"
                android:onClick="onNumberClick"
                android:textColor="@android:color/background_light"
                android:elevation="11dp"
                android:background="@null" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/number5"
                android:id="@+id/numberFive"
                android:layout_weight="1"
                android:textSize="25sp"
                android:onClick="onNumberClick"
                android:textColor="@android:color/background_light"
                android:elevation="11dp"
                android:background="@null" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/number2"
                android:id="@+id/numberTwo"
                android:layout_weight="1"
                android:textSize="25sp"
                android:onClick="onNumberClick"
                android:textColor="@android:color/background_light"
                android:elevation="11dp"
                android:background="@null" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/button0"
                android:id="@+id/buttonZero"
                android:layout_weight="1"
                android:textSize="25sp"
                android:background="@null"
                android:onClick="onNumberClick"
                android:textColor="@android:color/background_light" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/memoryIncrementor"
                android:id="@+id/memoryIncrementor"
                android:layout_weight="1"
                android:textSize="20sp"
                android:background="#bdd6d7d7"
                android:onClick="onMemoryButtonClick"
                android:textColor="@android:color/background_dark"
                android:layout_margin="1dp" />

            <Button
                android:text="@string/plusMinus"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/plusMinus"
                android:layout_weight="1"
                android:textSize="25sp"
                android:background="#910099cc"
                android:onClick="assignNegativePositive"
                android:textColor="@android:color/background_light"
                android:layout_margin="1dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/number9"
                android:id="@+id/numberNine"
                android:layout_weight="1"
                android:textSize="25sp"
                android:onClick="onNumberClick"
                android:textColor="@android:color/background_light"
                android:elevation="11dp"
                android:background="@null" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/number6"
                android:id="@+id/numberSix"
                android:layout_weight="1"
                android:textSize="25sp"
                android:onClick="onNumberClick"
                android:textColor="@android:color/background_light"
                android:elevation="11dp"
                android:background="@null" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/number3"
                android:id="@+id/numberThree"
                android:layout_weight="1"
                android:textSize="25sp"
                android:onClick="onNumberClick"
                android:textColor="@android:color/background_light"
                android:elevation="11dp"
                android:background="@null" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/equalButton"
                android:id="@+id/equalButton"
                android:layout_weight="1"
                android:textSize="25sp"
                android:background="#8d669900"
                android:onClick="onEqualButtonClick"
                android:textColor="@android:color/background_light"
                android:layout_margin="1dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/memoryReductor"
                android:id="@+id/memoryReductorButton"
                android:layout_weight="1"
                android:textSize="20sp"
                android:background="#bdd6d7d7"
                android:onClick="onMemoryButtonClick"
                android:textColor="@android:color/background_dark"
                android:layout_margin="1dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/clearScreen"
                android:id="@+id/clearButton"
                android:layout_weight="1"
                android:textSize="25sp"
                android:background="#7fcc0000"
                android:onClick="onClearScreenClick"
                android:textColor="@android:color/background_light"
                android:layout_margin="1dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/divideButton"
                android:id="@+id/divideButton"
                android:layout_weight="1"
                android:textSize="25sp"
                android:background="#c1aaaaaa"
                android:onClick="onOperationClick"
                android:textColor="@android:color/background_dark"
                android:layout_margin="1dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/multiplyButton"
                android:id="@+id/multiplicationButton"
                android:layout_weight="1"
                android:textSize="25sp"
                android:background="#c1aaaaaa"
                android:onClick="onOperationClick"
                android:textColor="@android:color/background_dark"
                android:layout_margin="1dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/subtractButton"
                android:id="@+id/subtractButton"
                android:layout_weight="1"
                android:textSize="35sp"
                android:background="#c1aaaaaa"
                android:onClick="onOperationClick"
                android:textColor="@android:color/background_dark"
                android:layout_margin="1dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/plusButton"
                android:id="@+id/plusButton"
                android:layout_weight="1"
                android:textSize="25sp"
                android:background="#c1aaaaaa"
                android:onClick="onOperationClick"
                android:textColor="@android:color/background_dark"
                android:layout_margin="1dp" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>